# amplifier-module-tool-pwsh

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt  test_pwsh_tool.py
.github/: copilot-instructions.md
.github/workflows/: claude.yml  dependency-review.yml  linked-issue.yml  pr-title.yml
amplifier_module_tool_pwsh/: __init__.py  safety.py
